--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
   },
