--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "app/index.js",
-  "scripts": {
-    "dev": "nodemon",
-    "start": "ts-node ./app/index.ts",
-    "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/joi": "^17.2.3",
-    "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "express": "^4.17.3",
-    "http-status-codes": "^2.2.0",
-    "joi": "^17.6.0",
-    "knex": "^1.0.3",
-    "objection": "^3.0.1",
-    "pg": "^8.7.3",
-    "ts-node": "^10.5.0"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "dist/app/index.js",
+    "scripts": {
+        "dev": "nodemon",
+        "build": "tsc -p .",
+        "db:migrate": "npm run build && knex migrate:latest -- --envfile env-local.env",
+        "db:rollback": "npm run build && knex migrate:rollback -- --envfile env-local.env",
+        "start": "node -r dotenv/config --enable-source-maps dist/app/index.js dotenv_config_path=env-local.env",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/joi": "^17.2.3",
+        "dotenv": "^16.0.0",
+        "nodemon": "^2.0.15",
+        "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "express": "^4.17.3",
+        "http-status-codes": "^2.2.0",
+        "joi": "^17.6.0",
+        "knex": "^1.0.3",
+        "objection": "^3.0.1",
+        "pg": "^8.7.3",
+        "ts-node": "^10.5.0"
+    }
 }
