--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,20 +1,21 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "allowJs": true,
-    "strictNullChecks": false,
-    "forceConsistentCasingInFileNames": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "resolveJsonModule": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": true
-  },
-  "exclude": ["node_modules", "build", "src/**/*.spec.*"]
+    "compilerOptions": {
+        "target": "es2020",
+        "module": "commonjs",
+        "outDir": "dist",
+        "esModuleInterop": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "allowJs": true,
+        "strictNullChecks": false,
+        "forceConsistentCasingInFileNames": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "allowSyntheticDefaultImports": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "resolveJsonModule": true,
+        "noImplicitAny": false,
+        "noUnusedLocals": true
+    },
+    "exclude": ["node_modules", "dist"]
 }
