add register functionality, fix migrations, modify database connection, fix req, res typing

--- a/backend/env-local.env
+++ b/backend/env-local.env
@@ -2,6 +2,6 @@ NODE_ENV=development
 PORT=4000
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=users
-DB_PASSWORD=users
-DB_DATABASE=users
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=postgres
