--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
         "@types/joi": "^17.2.3",
         "dotenv": "^16.0.0",
         "nodemon": "^2.0.15",
-        "typescript": "^4.5.5"
+        "typescript": "^4.5.5",
+        "@types/bcryptjs": "^2.4.2"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "express": "^4.17.3",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.0",
