--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
         image: postgres:12-alpine
         container_name: postgres_db
         environment:
-            POSTGRES_USER: users
-            POSTGRES_PASSWORD: users
-            POSTGRES_DB: users
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
+            POSTGRES_DB: postgres
         ports:
             - "5432:5432"
         volumes:
