--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,20 @@
     },
     "license": "ISC",
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.13",
         "@types/joi": "^17.2.3",
+        "@types/jsonwebtoken": "^8.5.8",
         "dotenv": "^16.0.0",
         "nodemon": "^2.0.15",
-        "typescript": "^4.5.5",
-        "@types/bcryptjs": "^2.4.2"
+        "typescript": "^4.5.5"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "express": "^4.17.3",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.0",
+        "jsonwebtoken": "^8.5.1",
         "knex": "^1.0.3",
         "objection": "^3.0.1",
         "pg": "^8.7.3",
