add middleware setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
         "knex": "^1.0.3",
         "objection": "^3.0.1",
         "pg": "^8.7.3",
-        "ts-node": "^10.5.0"
+        "ts-node": "^10.5.0",
+        "uuid": "^8.3.2"
     }
 }
