--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "@types/express": "^4.17.13",
         "@types/joi": "^17.2.3",
         "@types/jsonwebtoken": "^8.5.8",
+        "@types/uuid": "^8.3.4",
         "dotenv": "^16.0.0",
         "nodemon": "^2.0.15",
         "typescript": "^4.5.5"
